# cxx_basics

./: README.md  blackbox1.cpp  minigrep.cpp  otus.cpp  split_words2.cpp  string.cpp  templates.cpp  test.cpp  test.py
algorythms/: binary_search.cpp  check_anagrams.cpp  factorial.cpp  fibonacci.cpp  gcd.cpp  is_palindrome.cpp
basic/: CMakeLists.txt  array_pointer.cpp  char_values.cpp  chrono.cpp  cin.cpp  class.cpp  combinations.cpp  enum.cpp  filesystem.cpp  find_string.cpp  is_number.cpp  lambda.cpp  limits.cpp  operator_cout.cpp  permutations.cpp  pointers.cpp  power.cpp  regex.cpp  return_struct.cpp  set_count.cpp  several_args.cpp  stoi.cpp  swap.cpp  ternar.cpp  utf8_text.cpp  utf8_text.py  vector_insert.cpp
bits/: bit_test.cpp
containers/: static_container.cpp
json/: CMakeLists.txt  main.cpp
oop_test/: enemies.h  overload.cpp
projectile/: main.cpp  projectile.h
work_with_files/: getline_sep.cpp  ignore.cpp  test.txt  test2.txt  work_with_files.cpp
